Allow configuration of "Get Perplex" button

--- a/config_example.json
+++ b/config_example.json
@@ -19,6 +19,7 @@
     },
     "discord": {
         "appId": 923857760897101855,
-        "minimal": false
+        "minimal": false,
+        "repo_link": "https://github.com/EthanC/Perplex"
     }
 }
